moved to async handler

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/aniverse-corporation/anime-prime#readme",
   "dependencies": {
+    "@awaitjs/express": "^0.8.0",
     "@hapi/joi": "^17.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
