--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
-    "express-ejs-layouts": "^2.5.0",
     "express-rate-limit": "^5.3.0",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.0",
     "mongoose": "^5.13.7",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.4.10",
     "serve-favicon": "^2.5.0"
   },
