--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "lint": "eslint"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,6 @@
     "@awaitjs/express": "^0.8.0",
     "@hapi/joi": "^17.1.1",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "ejs": "^3.0.2",
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
+    "eslint": "^7.32.0",
     "nodemon": "^2.0.3"
   }
 }
