--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,9 @@
         "semi": [
             "error",
             "always"
+        ],
+        "no-unused-vars": [
+            "error", { "argsIgnorePattern": "^_" }
         ]
     }
 }
