--- a/package.json
+++ b/package.json
@@ -24,23 +24,21 @@
   "homepage": "https://github.com/aniverse-corporation/anime-prime#readme",
   "dependencies": {
     "@awaitjs/express": "^0.8.0",
-    "@hapi/joi": "^17.1.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "ejs": "^3.0.2",
     "express": "^4.17.1",
     "express-rate-limit": "^5.3.0",
+    "express-validator": "^6.12.1",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.0",
     "mongoose": "^5.13.7",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.10",
-    "serve-favicon": "^2.5.0"
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
     "eslint": "^7.32.0",
     "nodemon": "^2.0.3"
   }
