added episodes comments

--- a/.gitignore
+++ b/.gitignore
@@ -546,4 +546,6 @@ FodyWeavers.xsd
 ### VisualStudio Patch ###
 # Additional files built by Visual Studio
 
+built
+
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,visualstudio,dotenv,database,node,git
