--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.3.0",
     "express-validator": "^6.12.1",
@@ -35,8 +36,8 @@
     "mongodb": "^4.1.0",
     "mongoose": "^5.13.7",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.4.10",
-    "dotenv": "^8.2.0"
+    "mpath": "^0.8.4",
+    "nodemailer": "^6.4.10"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
