--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Anime Prime - Social Community For Anime",
   "main": "index.js",
   "scripts": {
-    "start": "node --experimental-modules server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js",
     "lint": "eslint"
   },
