--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/aniverse-corporation/anime-prime#readme",
   "dependencies": {
-    "@aniverse/utils": "^1.2.1",
+    "@aniverse/utils": "latest",
     "@awaitjs/express": "^0.8.0",
     "ansi-regex": ">=5.0.1",
     "bcryptjs": "^2.4.3",
