--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@aniverse/utils": "^2.2.0",
     "@awaitjs/express": "^0.8.0",
+    "@sendgrid/mail": "^7.6.2",
     "ansi-regex": ">=5.0.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
